# lzhpy

./: .gitignore  README.md  lmfit.ini  pyproject.toml  setup.py
dev/lzhfile/: __init__.py  filebase.py
dev/lzhfile/types/: excel.py  json.py  nfo.py  pkl.py  suffix.py  txt.py
dev/lzhlog/: __init__.py
dev/lzhnet/: chrome.py  mail.py
dev/lzhprt/: __init__.py  _base.py  _tool.py  container.py  pchunk.py  pdiy.py
dev/lzhprt/guide/: color.md
pypi/lzhfile/: pyproject.toml
pypi/lzhfile/src/: lzhfile
pypi/lzhlog/: pyproject.toml
pypi/lzhlog/src/: lzhlog
pypi/lzhnet/: pyproject.toml
pypi/lzhnet/src/: lzhnet
pypi/lzhprt/: pyproject.toml
pypi/lzhprt/src/: lzhprt
pypi/lzhpy/: pyproject.toml
pypi/lzhsta/: pyproject.toml
pypi/lzhsta/src/: lzhsta
pypi/lzhsys/: pyproject.toml
pypi/lzhsys/src/: lzhsys
src/lzhfile/: __init__.py  core.py  filebase.py  manager.py  operate.py  path.py
src/lzhfile/ext/: __init__.py  json.py  math.py  pdf.py  pkl.py  txt.py
src/lzhfile/types/: ini.py
src/lzhlog/: ftimer.py
src/lzhmath/base/: __init__.py  edouble.py
src/lzhmath/lzhfit/: lmfitexp.py
src/lzhmath/lzhreg/: __init__.py  od_linear.py  od_polyfit.py  od_simple.py  td_linear.py  td_lmfit.py  tools.py
src/lzhmath/lzhsta/: lzhsign.py
src/lzhmath/quant/: factor.py
src/lzhnet/: __init__.py  ssh.py
src/lzhprt/: container.py  unit.py
src/lzhpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lzhquant/date/: __init__.py  tick.py  timestamp.py  type.py
src/lzhsta/: para.py  regress.py
src/lzhsys/: __init__.py  cmd.py  process.py
(+50 files in other folders)
