[project]
name="lzhpy"
version="1.0.3"
authors=[
    { name="zhlei", email="leizuoho@mail.ustc.edu.cn" }
]
dependencies=[
    "scipy",
    "numpy",
    "lmfit",
    "pillow",
    "pandas",
    "xlwings",
    "colorlog",
    "paramiko",
    "selenium",
    "configparser"
]
description=""
requires-python=">=3.0"

[build-system]
requires = [
    "setuptools",
    "cython",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["all"]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.h", "*.c", "*.hpp", "*.cpp"]
